selfhost/test/typechecker/invocation/error_optional_param_type_mismatch.out
Error at %FILE_NAME%:2:8
Type mismatch for parameter 'b'
  |  foo(1, false, "hello")
            ^
Expected: Int
but instead found: Bool
